tests/neg/i20245/Context_1.scala
package effekt
package context

import effekt.typer.TyperOps


abstract class Context extends TyperOps {

  // bring the context itself in scope
  implicit val context: Context = this

}
